--- a/contactme.html
+++ b/contactme.html
@@ -29,107 +29,108 @@
     <title>Get in touch with Maryam Mohebbi</title>
   </head>
   <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-light fixed-top"
-      style="background-color: var(--third-blue)"
-    >
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/" title="Maryam Mohebbi Blog"
-          >Maryam Mohebbi</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="/" title="Maryam Mohebbi Home Page"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="/project.html"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                title="Project Links"
-              >
-                Project
-              </a>
-              <ul
-                style="background-color: var(--third-blue)"
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/project.html#starbucks-project-description"
-                    title="HTML Project Link"
-                    >HTML</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/project.html#weather-project-description"
-                    title="API Project Link"
-                    >API</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/project.html#apple-watch-project-description"
-                    title="JS Project Link"
-                    >Java Script</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/project.html#disney-project-description"
-                    title="Responsive Project Link"
-                    >Responsive</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/aboutme.html"
-                title="About Maryam Mohebbi"
-                >About Me</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/contactme.html"
-                title="Get in touch with Maryam Mohebbi"
-                >Get in Touch</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
     <div class="wrap">
+      <nav
+        class="navbar navbar-expand-lg navbar-light fixed-top"
+        style="background-color: var(--third-blue)"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/" title="Maryam Mohebbi Blog"
+            >Maryam Mohebbi</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/" title="Maryam Mohebbi Home Page"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="/project.html"
+                  id="navbarDropdownMenuLink"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  title="Project Links"
+                >
+                  Project
+                </a>
+                <ul
+                  style="background-color: var(--third-blue)"
+                  class="dropdown-menu"
+                  aria-labelledby="navbarDropdownMenuLink"
+                >
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/project.html#starbucks-project-description"
+                      title="HTML Project Link"
+                      >HTML</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/project.html#weather-project-description"
+                      title="API Project Link"
+                      >API</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/project.html#apple-watch-project-description"
+                      title="JS Project Link"
+                      >Java Script</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/project.html#disney-project-description"
+                      title="Responsive Project Link"
+                      >Responsive</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="/aboutme.html"
+                  title="About Maryam Mohebbi"
+                  >About Me</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/contactme.html"
+                  title="Get in touch with Maryam Mohebbi"
+                  >Get in Touch</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
       <div id="about-me" class="header-page">
-        <h1 class="h1-mainheader">Do you want contact with me ? 😎</h1>
+        <h1 class="h1-mainheader">Do you want to get in touch ? 😎</h1>
       </div>
 
       <div id="contactme-part" class="container mt-5">
