--- a/aboutme.html
+++ b/aboutme.html
@@ -231,15 +231,10 @@
             href="https://github.com/Mary-SheCodes/Portfolio-Project"
             class="footer-link"
             title="Github Link"
-            target="_blank"
             >Github</a
           >
           Hosted on
-          <a
-            href="https://www.netlify.com/"
-            class="footer-link"
-            title="Netlify Link"
-            target="_blank"
+          <a href="netlify.com" class="footer-link" title="Netlify Link"
             >Netlify</a
           >
         </span>
