Revert "Fixed footer position"
This reverts commit 9eb29f8499d32739314c9d70964b1c6f47de1799.

--- a/aboutme.html
+++ b/aboutme.html
@@ -131,77 +131,74 @@
       </div>
     </nav>
 
-    <div class="wrap">
-      <div id="about-me" class="header-page">
-        <h1 class="h1-mainheader">About Maryam Mohebbi</h1>
+    <div id="about-me" class="header-page">
+      <h1 class="h1-mainheader">About Maryam Mohebbi</h1>
+    </div>
+
+    <div id="aboutme-paragraph" class="container">
+      <div class="row row-h">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <p class="main-paragraph">
+            My name is Maryam. I was born in 1990 in Tehran, Iran. I graduated
+            in mathematics in highschool and IT Engineering in university on a
+            bachelor degree.<br />
+            After university, First of all I worked as a technical support and
+            help desk assistant in a cargo agency company for 1 year and 4
+            months. I solved all technical problems and configured the Mail
+            server and Domain network.<br />
+            After that, I started my current job as an administrative officer in
+            2016. My new company is active in cloud service technology. It was a
+            new challenge for me because before that I didn't know anything
+            about cloud technology.<br />
+            I always wanted to learn new things, so I tried to get new tasks to
+            learn more and more. I am getting to know the domains department and
+            accept this role. Because I never wanted to be a simple
+            administrative officer. I wanted to be a technical person that works
+            in my own major which is progressing day by day.<br />I started
+            learning about domain registration and domain related actions and I
+            became the domain department manager. In my current position, I
+            handle all client domain requests, accounting affairs related to
+            licences like cPanel, Plesk, Cloudlinux and Litespeed in addition to
+            my office work. I Always tried to learn from my friends and my
+            colleagues about new technical things.<br />
+            And now, I decided to change my major from Network Industry to
+            Programming and Coding. And I think it is because of my programmer
+            colleagues. I enjoy when I see they can  create everything that they
+            want and I am proud of them. And I pretty much want to be like them.
+            A perfect programmer that can create new things.
+          </p>
+        </div>
+        <div class="col-md-2"></div>
       </div>
 
-      <div id="aboutme-paragraph" class="container">
-        <div class="row row-h">
-          <div class="col-md-2"></div>
-          <div class="col-md-8">
-            <p class="main-paragraph">
-              My name is Maryam. I was born in 1990 in Tehran, Iran. I graduated
-              in mathematics in highschool and IT Engineering in university on a
-              bachelor degree.<br />
-              After university, First of all I worked as a technical support and
-              help desk assistant in a cargo agency company for 1 year and 4
-              months. I solved all technical problems and configured the Mail
-              server and Domain network.<br />
-              After that, I started my current job as an administrative officer
-              in 2016. My new company is active in cloud service technology. It
-              was a new challenge for me because before that I didn't know
-              anything about cloud technology.<br />
-              I always wanted to learn new things, so I tried to get new tasks
-              to learn more and more. I am getting to know the domains
-              department and accept this role. Because I never wanted to be a
-              simple administrative officer. I wanted to be a technical person
-              that works in my own major which is progressing day by day.<br />I
-              started learning about domain registration and domain related
-              actions and I became the domain department manager. In my current
-              position, I handle all client domain requests, accounting affairs
-              related to licences like cPanel, Plesk, Cloudlinux and Litespeed
-              in addition to my office work. I Always tried to learn from my
-              friends and my colleagues about new technical things.<br />
-              And now, I decided to change my major from Network Industry to
-              Programming and Coding. And I think it is because of my programmer
-              colleagues. I enjoy when I see they can  create everything that
-              they want and I am proud of them. And I pretty much want to be
-              like them. A perfect programmer that can create new things.
-            </p>
-          </div>
-          <div class="col-md-2"></div>
-        </div>
+      <div id="hobbies" class="header-page">
+        <h2 class="h2-mainheader">About my hobbies and habits</h2>
+      </div>
 
-        <div id="hobbies" class="header-page">
-          <h2 class="h2-mainheader">About my hobbies and habits</h2>
+      <div class="row row-h">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <p class="main-paragraph">
+            I like music and art but I never have not any talent!<br />
+            In elementary school I always copied a painting that my older
+            brother taught to me 🙈. Or I bought an acoustic guitar when I was
+            12, But I never could play guitar. But I really enjoy it when I see
+            a person playing any music industry or painting a professional
+            photo.<br />
+            Actually, I am not without talent. I can cook very well. I can cook
+            delicious cakes, cupcakes and some international food.<br />
+            In sport, I really enjoy role skating. But unfortunately, there
+            isn't any suitable playground or smooth ground for playing near my
+            house, So I had to give up this sport after university. I'm very sad
+            about it.<br />
+            Now, I spend my free time coding, listening to music and watching
+            movie series. I like fantasy movies, specifically vampires, witches
+            and wolves. Some of my favorite movies and series are: Twilight,
+            Vampire Diaries, Originals, The Legacies, Lucifer and friends.
+          </p>
         </div>
-
-        <div class="row row-h">
-          <div class="col-md-2"></div>
-          <div class="col-md-8">
-            <p class="main-paragraph">
-              I like music and art but I never have not any talent!<br />
-              In elementary school I always copied a painting that my older
-              brother taught to me 🙈. Or I bought an acoustic guitar when I was
-              12, But I never could play guitar. But I really enjoy it when I
-              see a person playing any music industry or painting a professional
-              photo.<br />
-              Actually, I am not without talent. I can cook very well. I can
-              cook delicious cakes, cupcakes and some international food.<br />
-              In sport, I really enjoy role skating. But unfortunately, there
-              isn't any suitable playground or smooth ground for playing near my
-              house, So I had to give up this sport after university. I'm very
-              sad about it.<br />
-              Now, I spend my free time coding, listening to music and watching
-              movie series. I like fantasy movies, specifically vampires,
-              witches and wolves. Some of my favorite movies and series are:
-              Twilight, Vampire Diaries, Originals, The Legacies, Lucifer and
-              friends.
-            </p>
-          </div>
-          <div class="col-md-2"></div>
-        </div>
+        <div class="col-md-2"></div>
       </div>
     </div>
 
