--- a/project.html
+++ b/project.html
@@ -127,194 +127,192 @@
         </div>
       </div>
     </nav>
-    <div class="wrap">
-      <div id="my-project" class="header-page">
-        <h1 class="h1-mainheader">Maryam's Coding Projects</h1>
+
+    <div id="my-project" class="header-page">
+      <h1 class="h1-mainheader">Maryam's Coding Projects</h1>
+    </div>
+
+    <div id="myproject-paragraph" class="container">
+      <div id="starbucks-project-description" class="row row-h">
+        <h2 class="h2-mainheader header-page">Starbucks Project</h2>
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div class="row">
+            <img
+              src="/image/starbucks.png"
+              alt="Starbucks Project"
+              class="img-fliud rounded img-thumbnail"
+              style="background-color: var(--third-blue)"
+            />
+          </div>
+          <div class="row row-h">
+            <p class="main-paragraph">
+              This is my first programming project. Based on HTML, CSS and basic
+              knowledge in JS. I designed coffee boxes with flexbox and hover
+              texts.
+            </p>
+            <span class="project-description">
+              <h3 class="h4-subheader">Made with :</h3>
+              HTML / CSS / JS</span
+            >
+            <span class="project-description">
+              <h3 class="h4-subheader">Compatible browsers :</h3>
+              Chrome, Edge, Firefox, Opera, Safari</span
+            >
+            <span class="project-description">
+              <h3 class="h4-subheader">Responsive :</h3>
+              No</span
+            >
+            <span class="project-description">
+              <h3 class="h4-subheader">Project Link :</h3>
+              <a
+                href="https://www.shecodes.io/workshops/shecodes-basics-275631ab-9840-4885-a6a8-5afa8911fe76/projects/442525"
+                class="btn project-link"
+                target="_blank"
+                title="Starbucks Project Link"
+                >Starbucks Project Link</a
+              >
+            </span>
+          </div>
+        </div>
+        <div class="col-md-2"></div>
       </div>
 
-      <div id="myproject-paragraph" class="container">
-        <div id="starbucks-project-description" class="row row-h">
-          <h2 class="h2-mainheader header-page">Starbucks Project</h2>
-          <div class="col-md-2"></div>
-          <div class="col-md-8">
-            <div class="row">
-              <img
-                src="/image/starbucks.png"
-                alt="Starbucks Project"
-                class="img-fliud rounded img-thumbnail"
-                style="background-color: var(--third-blue)"
-              />
-            </div>
-            <div class="row row-h">
-              <p class="main-paragraph">
-                This is my first programming project. Based on HTML, CSS and
-                basic knowledge in JS. I designed coffee boxes with flexbox and
-                hover texts.
-              </p>
-              <span class="project-description">
-                <h3 class="h4-subheader">Made with :</h3>
-                HTML / CSS / JS</span
-              >
-              <span class="project-description">
-                <h3 class="h4-subheader">Compatible browsers :</h3>
-                Chrome, Edge, Firefox, Opera, Safari</span
-              >
-              <span class="project-description">
-                <h3 class="h4-subheader">Responsive :</h3>
-                No</span
-              >
-              <span class="project-description">
-                <h3 class="h4-subheader">Project Link :</h3>
-                <a
-                  href="https://www.shecodes.io/workshops/shecodes-basics-275631ab-9840-4885-a6a8-5afa8911fe76/projects/442525"
-                  class="btn project-link"
-                  target="_blank"
-                  title="Starbucks Project Link"
-                  >Starbucks Project Link</a
-                >
-              </span>
-            </div>
+      <div id="weather-project-description" class="row row-h">
+        <h2 class="h2-mainheader header-page">Weather App Project</h2>
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div class="row">
+            <img
+              src="/image/weatherapp.png"
+              alt="Weather App Project"
+              class="img-fliud rounded img-thumbnail"
+              style="background-color: var(--third-blue)"
+            />
           </div>
-          <div class="col-md-2"></div>
+          <div class="row row-h">
+            <p class="main-paragraph">
+              This is my first API project. I was really excited when I finished
+              it. This is connected to the weather API and shows current
+              weather, next 6 hours and next 6 days prediction with low and high
+              degrees, humidity and status of weather with related icons.
+            </p>
+            <span class="project-description">
+              <h3 class="h4-subheader">Made with :</h3>
+              HTML / CSS / JS</span
+            >
+            <span class="project-description">
+              <h3 class="h4-subheader">Compatible browsers :</h3>
+              Chrome, Edge, Firefox, Opera, Safari</span
+            >
+            <span class="project-description">
+              <h3 class="h4-subheader">Responsive :</h3>
+              No</span
+            >
+            <span class="project-description">
+              <h3 class="h4-subheader">Project Link :</h3>
+              <a
+                href="https://mary-weatherapp.netlify.app"
+                class="btn project-link"
+                target="_blank"
+                title="Weather App Project Link"
+                >Weather App Project Link</a
+              >
+            </span>
+          </div>
         </div>
+        <div class="col-md-2"></div>
+      </div>
 
-        <div id="weather-project-description" class="row row-h">
-          <h2 class="h2-mainheader header-page">Weather App Project</h2>
-          <div class="col-md-2"></div>
-          <div class="col-md-8">
-            <div class="row">
-              <img
-                src="/image/weatherapp.png"
-                alt="Weather App Project"
-                class="img-fliud rounded img-thumbnail"
-                style="background-color: var(--third-blue)"
-              />
-            </div>
-            <div class="row row-h">
-              <p class="main-paragraph">
-                This is my first API project. I was really excited when I
-                finished it. This is connected to the weather API and shows
-                current weather, next 6 hours and next 6 days prediction with
-                low and high degrees, humidity and status of weather with
-                related icons.
-              </p>
-              <span class="project-description">
-                <h3 class="h4-subheader">Made with :</h3>
-                HTML / CSS / JS</span
-              >
-              <span class="project-description">
-                <h3 class="h4-subheader">Compatible browsers :</h3>
-                Chrome, Edge, Firefox, Opera, Safari</span
-              >
-              <span class="project-description">
-                <h3 class="h4-subheader">Responsive :</h3>
-                No</span
-              >
-              <span class="project-description">
-                <h3 class="h4-subheader">Project Link :</h3>
-                <a
-                  href="https://mary-weatherapp.netlify.app"
-                  class="btn project-link"
-                  target="_blank"
-                  title="Weather App Project Link"
-                  >Weather App Project Link</a
-                >
-              </span>
-            </div>
+      <div id="apple-watch-project-description" class="row row-h">
+        <h2 class="h2-mainheader header-page">Apple Watch Project</h2>
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div class="row">
+            <img
+              src="/image/applewatch.png"
+              alt="Apple Watch Project"
+              class="img-fliud rounded img-thumbnail"
+              style="background-color: var(--third-blue)"
+            />
           </div>
-          <div class="col-md-2"></div>
+          <div class="row row-h">
+            <p class="main-paragraph">
+              This is my first practice for JS skills. First of all, I thought
+              this was so hard to deploy. But when it started, I did it easily
+              based on my little knowledge and searched on google.
+            </p>
+            <span class="project-description">
+              <h3 class="h4-subheader">Made with :</h3>
+              HTML / CSS / JS</span
+            >
+            <span class="project-description">
+              <h3 class="h4-subheader">Compatible browsers :</h3>
+              Chrome, Edge, Firefox, Opera, Safari</span
+            >
+            <span class="project-description">
+              <h3 class="h4-subheader">Responsive :</h3>
+              No</span
+            >
+            <span class="project-description">
+              <h3 class="h4-subheader">Project Link :</h3>
+              <a
+                href="https://mary-applewatch.netlify.app"
+                class="btn project-link"
+                target="_blank"
+                title="Apple Watch Project Link"
+                >Apple Watch Project Link</a
+              >
+            </span>
+          </div>
         </div>
+        <div class="col-md-2"></div>
+      </div>
 
-        <div id="apple-watch-project-description" class="row row-h">
-          <h2 class="h2-mainheader header-page">Apple Watch Project</h2>
-          <div class="col-md-2"></div>
-          <div class="col-md-8">
-            <div class="row">
-              <img
-                src="/image/applewatch.png"
-                alt="Apple Watch Project"
-                class="img-fliud rounded img-thumbnail"
-                style="background-color: var(--third-blue)"
-              />
-            </div>
-            <div class="row row-h">
-              <p class="main-paragraph">
-                This is my first practice for JS skills. First of all, I thought
-                this was so hard to deploy. But when it started, I did it easily
-                based on my little knowledge and searched on google.
-              </p>
-              <span class="project-description">
-                <h3 class="h4-subheader">Made with :</h3>
-                HTML / CSS / JS</span
-              >
-              <span class="project-description">
-                <h3 class="h4-subheader">Compatible browsers :</h3>
-                Chrome, Edge, Firefox, Opera, Safari</span
-              >
-              <span class="project-description">
-                <h3 class="h4-subheader">Responsive :</h3>
-                No</span
-              >
-              <span class="project-description">
-                <h3 class="h4-subheader">Project Link :</h3>
-                <a
-                  href="https://mary-applewatch.netlify.app"
-                  class="btn project-link"
-                  target="_blank"
-                  title="Apple Watch Project Link"
-                  >Apple Watch Project Link</a
-                >
-              </span>
-            </div>
+      <div id="disney-project-description" class="row row-h">
+        <h2 class="h2-mainheader header-page">Disney Project</h2>
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div class="row">
+            <img
+              src="/image/disney.png"
+              alt="Disney Project"
+              class="img-fliud rounded img-thumbnail"
+              style="background-color: var(--third-blue)"
+            />
           </div>
-          <div class="col-md-2"></div>
-        </div>
-
-        <div id="disney-project-description" class="row row-h">
-          <h2 class="h2-mainheader header-page">Disney Project</h2>
-          <div class="col-md-2"></div>
-          <div class="col-md-8">
-            <div class="row">
-              <img
-                src="/image/disney.png"
-                alt="Disney Project"
-                class="img-fliud rounded img-thumbnail"
-                style="background-color: var(--third-blue)"
-              />
-            </div>
-            <div class="row row-h">
-              <p class="main-paragraph">
-                This is my favorite and first HTML/Responsive project. I Always
-                like Diesny's animations and girls. So after I learned something
-                about Responsive, for practicing I decided to make a project
-                about Disney's powerful girls.
-              </p>
-              <span class="project-description">
-                <h3 class="h4-subheader">Made with :</h3>
-                HTML / CSS</span
+          <div class="row row-h">
+            <p class="main-paragraph">
+              This is my favorite and first HTML/Responsive project. I Always
+              like Diesny's animations and girls. So after I learned something
+              about Responsive, for practicing I decided to make a project about
+              Disney's powerful girls.
+            </p>
+            <span class="project-description">
+              <h3 class="h4-subheader">Made with :</h3>
+              HTML / CSS</span
+            >
+            <span class="project-description">
+              <h3 class="h4-subheader">Compatible browsers :</h3>
+              Chrome, Edge, Firefox, Opera, Safari</span
+            >
+            <span class="project-description">
+              <h3 class="h4-subheader">Responsive :</h3>
+              Yes</span
+            >
+            <span class="project-description">
+              <h3 class="h4-subheader">Project Link :</h3>
+              <a
+                href="https://mary-disneywomans.netlify.app/"
+                class="btn project-link"
+                target="_blank"
+                title="Disney Project Link"
+                >Disney Project Link</a
               >
-              <span class="project-description">
-                <h3 class="h4-subheader">Compatible browsers :</h3>
-                Chrome, Edge, Firefox, Opera, Safari</span
-              >
-              <span class="project-description">
-                <h3 class="h4-subheader">Responsive :</h3>
-                Yes</span
-              >
-              <span class="project-description">
-                <h3 class="h4-subheader">Project Link :</h3>
-                <a
-                  href="https://mary-disneywomans.netlify.app/"
-                  class="btn project-link"
-                  target="_blank"
-                  title="Disney Project Link"
-                  >Disney Project Link</a
-                >
-              </span>
-            </div>
+            </span>
           </div>
-          <div class="col-md-2"></div>
         </div>
+        <div class="col-md-2"></div>
       </div>
     </div>
 
