--- a/index.html
+++ b/index.html
@@ -134,183 +134,165 @@
       </div>
     </nav>
 
-    <div class="wrap">
-      <div id="header-page" class="header-page">
-        <h1 class="h1-mainheader">This is Maryam Mohebbi Personal blog</h1>
-        <h2 class="h2-mainheader">
-          IT Engineer and Junior Front-End Developer
-        </h2>
-      </div>
+    <div id="header-page" class="header-page">
+      <h1 class="h1-mainheader">This is Maryam Mohebbi Personal blog</h1>
+      <h2 class="h2-mainheader">IT Engineer and Junior Front-End Developer</h2>
+    </div>
 
-      <div id="intro-paragraph" class="container">
-        <div class="row row-h">
-          <div class="col-md-7">
-            <p class="main-paragraph">
-              My name is Maryam. I was born in 1990 in Tehran, Iran. I graduated
-              in mathematics in highschool and IT Engineering in university on a
-              bachelor degree.
-              <br />
-              First of all I worked as a technical support and help desk
-              assistant in a cargo agency company for 1 year and 4 months. After
-              that, I started my current job as an administrative officer in
-              2016. My new company is active in cloud service technology.
-              <br />
-              I always wanted to learn new things, so I tried to get new tasks
-              to learn more and more. I started learning about domain
-              registration and domain related actions and I became the domain
-              department manager. Because I never wanted to be a simple
-              administrative officer. I wanted to be a technical person that
-              works in my own major which is progressing day by day.
-              <br />
-              And now, I decided to change my major from Network Industry to
-              programming and coding. And I think it is because of my programmer
-              colleagues. I enjoy when I see they can  create everything that
-              they want and I am proud of them. And I pretty much want to be
-              like them. A perfect programmer that can create new things.
-            </p>
-            <a
-              href="/aboutme.html"
-              class="btn project-btn"
-              title="Read more about Maryam Mohebbi"
-              >Read More About Me ....</a
-            >
-          </div>
-          <div class="col-md-5 my-auto text-center">
-            <img
-              src="/image/main.JPG"
-              alt="Maryam Mohebbi personal photo"
-              class="img-fluid w-75 rounded"
-              id="main-photo"
-            />
-          </div>
+    <div id="intro-paragraph" class="container">
+      <div class="row row-h">
+        <div class="col-md-7">
+          <p class="main-paragraph">
+            My name is Maryam. I was born in 1990 in Tehran, Iran. I graduated
+            in mathematics in highschool and IT Engineering in university on a
+            bachelor degree.
+            <br />
+            First of all I worked as a technical support and help desk assistant
+            in a cargo agency company for 1 year and 4 months. After that, I
+            started my current job as an administrative officer in 2016. My new
+            company is active in cloud service technology.
+            <br />
+            I always wanted to learn new things, so I tried to get new tasks to
+            learn more and more. I started learning about domain registration
+            and domain related actions and I became the domain department
+            manager. Because I never wanted to be a simple administrative
+            officer. I wanted to be a technical person that works in my own
+            major which is progressing day by day.
+            <br />
+            And now, I decided to change my major from Network Industry to
+            programming and coding. And I think it is because of my programmer
+            colleagues. I enjoy when I see they can  create everything that they
+            want and I am proud of them. And I pretty much want to be like them.
+            A perfect programmer that can create new things.
+          </p>
+          <a
+            href="/aboutme.html"
+            class="btn project-btn"
+            title="Read more about Maryam Mohebbi"
+            >Read More About Me ....</a
+          >
         </div>
-      </div>
-
-      <div>
-        <h2 class="h2-subheader">
-          I wanna show you my first projects in coding
-        </h2>
-      </div>
-
-      <div id="projects" class="container">
-        <div id="html-project" class="row row-h">
-          <div class="col-md-4 my-auto text-center">
-            <img
-              src="/image/starbucks.png"
-              alt="starbucks project"
-              class="img-fluid w-100 d-none d-md-block rounded-right img-effect"
-            />
-          </div>
-          <div class="col-md-6 my-auto">
-            <h3 class="h3-subheader">Starbucks Project</h3>
-            <p class="main-paragraph">
-              This is my first programming project. Based on HTML, CSS and basic
-              knowledge in JS. I designed coffee boxes with flexbox and hover
-              texts.
-            </p>
-            <a
-              href="/project.html#starbucks-project-description"
-              class="btn project-btn"
-              title="Vist Starbucks Project"
-              >Want to visit ?</a
-            >
-          </div>
-          <div class="col-md-2"></div>
-        </div>
-
-        <div id="api-project" class="row row-h">
-          <div class="col-md-1"></div>
-          <div class="col-md-4 my-auto text-center">
-            <img
-              src="/image/weatherapp.png"
-              alt="weatherapp project"
-              class="
-                img-fluid
-                w-100
-                d-none d-md-block
-                rounded-middle
-                img-effect
-              "
-            />
-          </div>
-          <div class="col-md-6 my-auto">
-            <h3 class="h3-subheader">Weather App Project</h3>
-            <p class="main-paragraph">
-              This is my first API project. I was really excited when I
-              finished it. This is connected to the weather API and shows
-              current weather, next 6 hours and next 6 days prediction with low
-              and high degrees, humidity and status of weather with related
-              icons.
-            </p>
-            <a
-              href="/project.html#weather-project-description"
-              class="btn project-btn"
-              title="Visit Weather App Project"
-              >Want to visit ?</a
-            >
-          </div>
-          <div class="col-md-1"></div>
-        </div>
-
-        <div id="js-project" class="row row-h">
-          <div class="col-md-1"></div>
-          <div class="col-md-6 my-auto">
-            <h3 class="h3-subheader">Apple Watch Project</h3>
-            <p class="main-paragraph">
-              This is my first practice for JS skills. First of all, I
-              thought this was so hard to deploy. But when it started, I did it
-              easily based on my little knowledge and searched on google.
-            </p>
-            <a
-              href="/project.html#apple-watch-project-description"
-              class="btn project-btn"
-              title="Visit Apple Watch Project"
-              >Want to visit ?</a
-            >
-          </div>
-          <div class="col-md-4 my-auto text-center">
-            <img
-              src="/image/applewatch.png"
-              alt="applewatch project"
-              class="
-                img-fluid
-                w-100
-                d-none d-md-block
-                rounded-middle
-                img-effect
-              "
-            />
-          </div>
-          <div class="col-md-1"></div>
-        </div>
-
-        <div id="responsive-project" class="row row-h">
-          <div class="col-md-2"></div>
-          <div class="col-md-6 my-auto">
-            <h3 class="h3-subheader">Disney Project</h3>
-            <p class="main-paragraph">
-              This is my favorite and first HTML/Responsive project. I Always
-              like Diesny's animations and girls. So after I learned something
-              about Responsive, for practicing I decided to make a project about
-              Disney's powerful girls.
-            </p>
-            <a
-              href="/project.html#disney-project-description"
-              class="btn project-btn"
-              title="Visit Disney Project"
-              >Want to visit ?</a
-            >
-          </div>
-          <div class="col-md-4 my-auto text-center">
-            <img
-              src="/image/disney.png"
-              alt="disney project"
-              class="img-fluid w-100 d-none d-md-block rounded-left img-effect"
-            />
-          </div>
+        <div class="col-md-5 my-auto text-center">
+          <img
+            src="/image/main.JPG"
+            alt="Maryam Mohebbi personal photo"
+            class="img-fluid w-75 rounded"
+            id="main-photo"
+          />
         </div>
       </div>
     </div>
+
+    <div>
+      <h2 class="h2-subheader">I wanna show you my first projects in coding</h2>
+    </div>
+
+    <div id="projects" class="container">
+      <div id="html-project" class="row row-h">
+        <div class="col-md-4 my-auto text-center">
+          <img
+            src="/image/starbucks.png"
+            alt="starbucks project"
+            class="img-fluid w-100 d-none d-md-block rounded-right img-effect"
+          />
+        </div>
+        <div class="col-md-6 my-auto">
+          <h3 class="h3-subheader">Starbucks Project</h3>
+          <p class="main-paragraph">
+            This is my first programming project. Based on HTML, CSS and basic
+            knowledge in JS. I designed coffee boxes with flexbox and hover
+            texts.
+          </p>
+          <a
+            href="/project.html#starbucks-project-description"
+            class="btn project-btn"
+            title="Vist Starbucks Project"
+            >Want to visit ?</a
+          >
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+
+      <div id="api-project" class="row row-h">
+        <div class="col-md-1"></div>
+        <div class="col-md-4 my-auto text-center">
+          <img
+            src="/image/weatherapp.png"
+            alt="weatherapp project"
+            class="img-fluid w-100 d-none d-md-block rounded-middle img-effect"
+          />
+        </div>
+        <div class="col-md-6 my-auto">
+          <h3 class="h3-subheader">Weather App Project</h3>
+          <p class="main-paragraph">
+            This is my first API project. I was really excited when I
+            finished it. This is connected to the weather API and shows current
+            weather, next 6 hours and next 6 days prediction with low and high
+            degrees, humidity and status of weather with related icons.
+          </p>
+          <a
+            href="/project.html#weather-project-description"
+            class="btn project-btn"
+            title="Visit Weather App Project"
+            >Want to visit ?</a
+          >
+        </div>
+        <div class="col-md-1"></div>
+      </div>
+
+      <div id="js-project" class="row row-h">
+        <div class="col-md-1"></div>
+        <div class="col-md-6 my-auto">
+          <h3 class="h3-subheader">Apple Watch Project</h3>
+          <p class="main-paragraph">
+            This is my first practice for JS skills. First of all, I
+            thought this was so hard to deploy. But when it started, I did it
+            easily based on my little knowledge and searched on google.
+          </p>
+          <a
+            href="/project.html#apple-watch-project-description"
+            class="btn project-btn"
+            title="Visit Apple Watch Project"
+            >Want to visit ?</a
+          >
+        </div>
+        <div class="col-md-4 my-auto text-center">
+          <img
+            src="/image/applewatch.png"
+            alt="applewatch project"
+            class="img-fluid w-100 d-none d-md-block rounded-middle img-effect"
+          />
+        </div>
+        <div class="col-md-1"></div>
+      </div>
+
+      <div id="responsive-project" class="row row-h">
+        <div class="col-md-2"></div>
+        <div class="col-md-6 my-auto">
+          <h3 class="h3-subheader">Disney Project</h3>
+          <p class="main-paragraph">
+            This is my favorite and first HTML/Responsive project. I Always like
+            Diesny's animations and girls. So after I learned something about
+            Responsive, for practicing I decided to make a project about
+            Disney's powerful girls.
+          </p>
+          <a
+            href="/project.html#disney-project-description"
+            class="btn project-btn"
+            title="Visit Disney Project"
+            >Want to visit ?</a
+          >
+        </div>
+        <div class="col-md-4 my-auto text-center">
+          <img
+            src="/image/disney.png"
+            alt="disney project"
+            class="img-fluid w-100 d-none d-md-block rounded-left img-effect"
+          />
+        </div>
+      </div>
+    </div>
+
     <footer
       class="
         d-flex
@@ -391,7 +373,6 @@
         ></span>
       </div>
     </footer>
-
     <script src="src/js.js"></script>
   </body>
 </html>
