Solve iPhonex responsive problem

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <div id="intro-paragraph" class="container">
       <div class="row row-h">
-        <div class="col-md-7">
+        <div class="col-lg-7">
           <p class="main-paragraph">
             My name is Maryam. I was born in 1990 in Tehran, Iran. I graduated
             in mathematics in highschool and IT Engineering in university on a
@@ -172,7 +172,7 @@
             >Read More About Me ....</a
           >
         </div>
-        <div class="col-md-5 my-auto text-center">
+        <div class="col-lg-5 my-auto text-center">
           <img
             src="/image/main.JPG"
             alt="Maryam Mohebbi personal photo"
@@ -189,14 +189,14 @@
 
     <div id="projects" class="container">
       <div id="html-project" class="row row-h">
-        <div class="col-md-4 my-auto text-center">
+        <div class="col-lg-4 my-auto text-center">
           <img
             src="/image/starbucks.png"
             alt="starbucks project"
-            class="img-fluid w-100 d-none d-md-block rounded-right img-effect"
+            class="img-fluid w-100 d-none d-lg-block rounded-right img-effect"
           />
         </div>
-        <div class="col-md-6 my-auto">
+        <div class="col-lg-6 my-auto">
           <h3 class="h3-subheader">Starbucks Project</h3>
           <p class="main-paragraph">
             This is my first programming project. Based on HTML, CSS and basic
@@ -210,19 +210,19 @@
             >Want to visit ?</a
           >
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-lg-2"></div>
       </div>
 
       <div id="api-project" class="row row-h">
-        <div class="col-md-1"></div>
-        <div class="col-md-4 my-auto text-center">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-4 my-auto text-center">
           <img
             src="/image/weatherapp.png"
             alt="weatherapp project"
-            class="img-fluid w-100 d-none d-md-block rounded-middle img-effect"
+            class="img-fluid w-100 d-none d-lg-block rounded-middle img-effect"
           />
         </div>
-        <div class="col-md-6 my-auto">
+        <div class="col-lg-6 my-auto">
           <h3 class="h3-subheader">Weather App Project</h3>
           <p class="main-paragraph">
             This is my first API project. I was really excited when I
@@ -237,12 +237,12 @@
             >Want to visit ?</a
           >
         </div>
-        <div class="col-md-1"></div>
+        <div class="col-lg-1"></div>
       </div>
 
       <div id="js-project" class="row row-h">
-        <div class="col-md-1"></div>
-        <div class="col-md-6 my-auto">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-6 my-auto">
           <h3 class="h3-subheader">Apple Watch Project</h3>
           <p class="main-paragraph">
             This is my first practice for JS skills. First of all, I
@@ -256,19 +256,19 @@
             >Want to visit ?</a
           >
         </div>
-        <div class="col-md-4 my-auto text-center">
+        <div class="col-lg-4 my-auto text-center">
           <img
             src="/image/applewatch.png"
             alt="applewatch project"
-            class="img-fluid w-100 d-none d-md-block rounded-middle img-effect"
+            class="img-fluid w-100 d-none d-lg-block rounded-middle img-effect"
           />
         </div>
-        <div class="col-md-1"></div>
+        <div class="col-lg-1"></div>
       </div>
 
       <div id="responsive-project" class="row row-h">
-        <div class="col-md-2"></div>
-        <div class="col-md-6 my-auto">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-6 my-auto">
           <h3 class="h3-subheader">Disney Project</h3>
           <p class="main-paragraph">
             This is my favorite and first HTML/Responsive project. I Always like
@@ -283,11 +283,11 @@
             >Want to visit ?</a
           >
         </div>
-        <div class="col-md-4 my-auto text-center">
+        <div class="col-lg-4 my-auto text-center">
           <img
             src="/image/disney.png"
             alt="disney project"
-            class="img-fluid w-100 d-none d-md-block rounded-left img-effect"
+            class="img-fluid w-100 d-none d-lg-block rounded-left img-effect"
           />
         </div>
       </div>
