--- a/contactme.html
+++ b/contactme.html
@@ -129,7 +129,7 @@
     </nav>
 
     <div id="about-me" class="header-page">
-      <h1 class="h1-mainheader">Do you want contact with me ? 😎</h1>
+      <h1 class="h1-mainheader">Do you want to get in touch with me ? 😎</h1>
     </div>
 
     <div id="contactme-part" class="container mt-5">
