--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
       <div class="row row-h">
         <div class="col-lg-7">
           <p class="main-paragraph">
-            My name is Maryam. I was born in 1990 in Tehran, Iran. I graduated
-            in mathematics in highschool and IT Engineering in university on a
-            bachelor degree.
+            My name is Maryam Mohebbi. I was born in 1990 in Tehran, Iran. I
+            graduated in mathematics in highschool and IT Engineering in
+            university on a bachelor degree.
             <br />
             First of all I worked as a technical support and help desk assistant
             in a cargo agency company for 1 year and 4 months. After that, I
@@ -184,7 +184,9 @@
     </div>
 
     <div>
-      <h2 class="h2-subheader">I wanna show you my first projects in coding</h2>
+      <h2 class="h2-subheader">
+        I Want to show you my first projects in coding
+      </h2>
     </div>
 
     <div id="projects" class="container">
