--- a/contactme.html
+++ b/contactme.html
@@ -164,6 +164,7 @@
               ><span class="contact-title">Send an Email to me</span>
             </span>
           </div>
+
           <div class="row">
             <span class="contact-icon">
               <a
@@ -177,6 +178,7 @@
               ></span
             >
           </div>
+
           <div class="row">
             <span class="contact-icon">
               <a
@@ -188,6 +190,7 @@
               ><span class="contact-title">Send a message on Skype</span></span
             >
           </div>
+
           <div class="row">
             <span class="contact-icon">
               <a
@@ -198,6 +201,9 @@
                 ><i class="fab fa-instagram"></i></a
               ><span class="contact-title">Follow me in Instagram</span></span
             >
+          </div>
+
+          <div class="row">
             <span class="contact-icon">
               <a
                 class="contact-link"
@@ -208,8 +214,8 @@
               ><span class="contact-title">See my codes on Github</span></span
             >
           </div>
-          <div class="row"></div>
         </div>
+
         <div class="col-md-2"></div>
       </div>
     </div>
