--- a/contactme.html
+++ b/contactme.html
@@ -29,282 +29,293 @@
     <title>Get in touch with Maryam Mohebbi</title>
   </head>
   <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-light fixed-top"
-      style="background-color: var(--third-blue)"
-    >
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/" title="Maryam Mohebbi Blog"
-          >Maryam Mohebbi</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="/" title="Maryam Mohebbi Home Page"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="/project.html"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                title="Project Links"
-              >
-                Project
-              </a>
-              <ul
-                style="background-color: var(--third-blue)"
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/project.html#starbucks-project-description"
-                    title="HTML Project Link"
-                    >HTML</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/project.html#weather-project-description"
-                    title="API Project Link"
-                    >API</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/project.html#apple-watch-project-description"
-                    title="JS Project Link"
-                    >Java Script</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/project.html#disney-project-description"
-                    title="Responsive Project Link"
-                    >Responsive</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/aboutme.html"
-                title="About Maryam Mohebbi"
-                >About Me</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/contactme.html"
-                title="Get in touch with Maryam Mohebbi"
-                >Get in Touch</a
-              >
-            </li>
-          </ul>
+    <div class="header">
+      <nav
+        class="navbar navbar-expand-lg navbar-light fixed-top"
+        style="background-color: var(--third-blue)"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/" title="Maryam Mohebbi Blog"
+            >Maryam Mohebbi</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/" title="Maryam Mohebbi Home Page"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="/project.html"
+                  id="navbarDropdownMenuLink"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  title="Project Links"
+                >
+                  Project
+                </a>
+                <ul
+                  style="background-color: var(--third-blue)"
+                  class="dropdown-menu"
+                  aria-labelledby="navbarDropdownMenuLink"
+                >
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/project.html#starbucks-project-description"
+                      title="HTML Project Link"
+                      >HTML</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/project.html#weather-project-description"
+                      title="API Project Link"
+                      >API</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/project.html#apple-watch-project-description"
+                      title="JS Project Link"
+                      >Java Script</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/project.html#disney-project-description"
+                      title="Responsive Project Link"
+                      >Responsive</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="/aboutme.html"
+                  title="About Maryam Mohebbi"
+                  >About Me</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/contactme.html"
+                  title="Get in touch with Maryam Mohebbi"
+                  >Get in Touch</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-
-    <div id="about-me" class="header-page">
-      <h1 class="h1-mainheader">Do you want to get in touch with me ? 😎</h1>
+      </nav>
     </div>
 
-    <div id="contactme-part" class="container mt-5">
-      <div class="row row-h">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 text-center">
-          <img
-            src="/image/Get-in-Touch.jpg"
-            alt="Get in Touch"
-            class="img-fliud rounded w-50"
-          />
-        </div>
-        <div class="col-md-2"></div>
+    <div class="wrap">
+      <div id="about-me" class="header-page">
+        <h1 class="h1-mainheader">Do you want to get in touch with me ? 😎</h1>
       </div>
 
-      <div class="row row-h">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <p class="main-paragraph">
-            If you want to suggest a new series or advise me to make my project
-            better, please do not hesitate to contact me. I will be happy to
-            keep in touch with you and know your ideas about my projects.
-          </p>
-          <div class="row">
-            <span class="contact-icon">
-              <a
-                class="contact-link"
-                href="mailto:maryam.mohebbi.2@gmail.com"
-                target="_blank"
-                title="Email Link"
-                ><i class="fas fa-envelope"></i></a
-              ><span class="contact-title">Send an Email to me</span>
-            </span>
+      <div id="contactme-part" class="container mt-5">
+        <div class="row row-h">
+          <div class="col-md-2"></div>
+          <div class="col-md-8 text-center">
+            <img
+              src="/image/Get-in-Touch.jpg"
+              alt="Get in Touch"
+              class="img-fliud rounded w-50"
+            />
           </div>
-
-          <div class="row">
-            <span class="contact-icon">
-              <a
-                class="contact-link"
-                href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
-                target="_blank"
-                title="Linkedin Link"
-                ><i class="fab fa-linkedin"></i></a
-              ><span class="contact-title"
-                >Connect with me on Linkedin</span
-              ></span
-            >
-          </div>
-
-          <div class="row">
-            <span class="contact-icon">
-              <a
-                class="contact-link"
-                href="skype:maryam-mohebbi"
-                target="_blank"
-                title="Skype Link"
-                ><i class="fab fa-skype"></i></a
-              ><span class="contact-title">Send a message on Skype</span></span
-            >
-          </div>
-
-          <div class="row">
-            <span class="contact-icon">
-              <a
-                class="contact-link"
-                href="https://www.instagram.com/maryaaaaamm/"
-                target="_blank"
-                title="Instagram Link"
-                ><i class="fab fa-instagram"></i></a
-              ><span class="contact-title">Follow me in Instagram</span></span
-            >
-          </div>
-
-          <div class="row">
-            <span class="contact-icon">
-              <a
-                class="contact-link"
-                href="https://github.com/maryam-mohebbi"
-                target="_blank"
-                title="Github Link"
-                ><i class="fab fa-github"></i></a
-              ><span class="contact-title">See my codes on Github</span></span
-            >
-          </div>
+          <div class="col-md-2"></div>
         </div>
 
-        <div class="col-md-2"></div>
+        <div class="row row-h">
+          <div class="col-md-2"></div>
+          <div class="col-md-8">
+            <p class="main-paragraph">
+              If you want to suggest a new series or advise me to make my
+              project better, please do not hesitate to contact me. I will be
+              happy to keep in touch with you and know your ideas about my
+              projects.
+            </p>
+            <div class="row">
+              <span class="contact-icon">
+                <a
+                  class="contact-link"
+                  href="mailto:maryam.mohebbi.2@gmail.com"
+                  target="_blank"
+                  title="Email Link"
+                  ><i class="fas fa-envelope"></i></a
+                ><span class="contact-title">Send an Email to me</span>
+              </span>
+            </div>
+
+            <div class="row">
+              <span class="contact-icon">
+                <a
+                  class="contact-link"
+                  href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
+                  target="_blank"
+                  title="Linkedin Link"
+                  ><i class="fab fa-linkedin"></i></a
+                ><span class="contact-title"
+                  >Connect with me on Linkedin</span
+                ></span
+              >
+            </div>
+
+            <div class="row">
+              <span class="contact-icon">
+                <a
+                  class="contact-link"
+                  href="skype:maryam-mohebbi"
+                  target="_blank"
+                  title="Skype Link"
+                  ><i class="fab fa-skype"></i></a
+                ><span class="contact-title"
+                  >Send a message on Skype</span
+                ></span
+              >
+            </div>
+
+            <div class="row">
+              <span class="contact-icon">
+                <a
+                  class="contact-link"
+                  href="https://www.instagram.com/maryaaaaamm/"
+                  target="_blank"
+                  title="Instagram Link"
+                  ><i class="fab fa-instagram"></i></a
+                ><span class="contact-title">Follow me in Instagram</span></span
+              >
+            </div>
+
+            <div class="row">
+              <span class="contact-icon">
+                <a
+                  class="contact-link"
+                  href="https://github.com/maryam-mohebbi"
+                  target="_blank"
+                  title="Github Link"
+                  ><i class="fab fa-github"></i></a
+                ><span class="contact-title">See my codes on Github</span></span
+              >
+            </div>
+          </div>
+
+          <div class="col-md-2"></div>
+        </div>
       </div>
     </div>
 
-    <footer
-      class="
-        d-flex
-        flex-wrap
-        justify-content-between
-        align-items-center
-        py-1
-        mt-1
-        border-top
-        footer-bg
-      "
-    >
-      <div class="col-md-6 d-flex align-items-center" id="contact-me-footer">
-        <a
-          href="/"
-          class="mb-2 me-2 mb-md-0 text-muted text-decoration-none lh-1"
-        >
-        </a>
-        <span class="text-muted footer-copyright"
-          >© 2021 , Designed by <strong>Maryam Mohebbi</strong> in Tehran with ❤
-          <br />
-          Open Source on
+    <div class="footer">
+      <footer
+        class="
+          d-flex
+          flex-wrap
+          justify-content-between
+          align-items-center
+          py-1
+          mt-1
+          border-top
+          footer-bg
+        "
+      >
+        <div class="col-md-6 d-flex align-items-center" id="contact-me-footer">
           <a
-            href="https://github.com/Mary-SheCodes/Portfolio-Project"
-            class="footer-link"
-            title="Github Link"
-            target="_blank"
-            >Github</a
+            href="/"
+            class="mb-2 me-2 mb-md-0 text-muted text-decoration-none lh-1"
           >
-          Hosted on
-          <a
-            href="https://www.netlify.com/"
-            class="footer-link"
-            title="Netlify Link"
-            target="_blank"
-            >Netlify</a
-          >
-        </span>
-      </div>
-      <div class="col-md-2 d-flex align-items-center"></div>
+          </a>
+          <span class="text-muted footer-copyright"
+            >© 2021 , Designed by <strong>Maryam Mohebbi</strong> in Tehran with
+            ❤
+            <br />
+            Open Source on
+            <a
+              href="https://github.com/Mary-SheCodes/Portfolio-Project"
+              class="footer-link"
+              title="Github Link"
+              target="_blank"
+              >Github</a
+            >
+            Hosted on
+            <a
+              href="https://www.netlify.com/"
+              class="footer-link"
+              title="Netlify Link"
+              target="_blank"
+              >Netlify</a
+            >
+          </span>
+        </div>
+        <div class="col-md-2 d-flex align-items-center"></div>
 
-      <div class="col-md-4 d-flex justify-content-center">
-        <span class="footer-icon">
-          <a
-            class="footer-link"
-            href="mailto:maryam.mohebbi.2@gmail.com"
-            target="_blank"
-            title="Email Link"
-            ><i class="fas fa-envelope"></i
-          ></a>
-        </span>
-        <span class="footer-icon">
-          <a
-            class="footer-link"
-            href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
-            target="_blank"
-            title="Linkedin Link"
-            ><i class="fab fa-linkedin"></i></a
-        ></span>
-        <span class="footer-icon">
-          <a
-            class="footer-link"
-            href="skype:maryam-mohebbi"
-            target="_blank"
-            title="Skype Link"
-            ><i class="fab fa-skype"></i></a
-        ></span>
-        <span class="footer-icon">
-          <a
-            class="footer-link"
-            href="https://www.instagram.com/maryaaaaamm/"
-            target="_blank"
-            title="Instagram Link"
-            ><i class="fab fa-instagram"></i></a
-        ></span>
-        <span class="footer-icon">
-          <a
-            class="footer-link"
-            href="https://github.com/maryam-mohebbi"
-            target="_blank"
-            title="Github Link"
-            ><i class="fab fa-github"></i></a
-        ></span>
-      </div>
-    </footer>
+        <div class="col-md-4 d-flex justify-content-center">
+          <span class="footer-icon">
+            <a
+              class="footer-link"
+              href="mailto:maryam.mohebbi.2@gmail.com"
+              target="_blank"
+              title="Email Link"
+              ><i class="fas fa-envelope"></i
+            ></a>
+          </span>
+          <span class="footer-icon">
+            <a
+              class="footer-link"
+              href="https://www.linkedin.com/in/maryam-mohebbi-61b905126/"
+              target="_blank"
+              title="Linkedin Link"
+              ><i class="fab fa-linkedin"></i></a
+          ></span>
+          <span class="footer-icon">
+            <a
+              class="footer-link"
+              href="skype:maryam-mohebbi"
+              target="_blank"
+              title="Skype Link"
+              ><i class="fab fa-skype"></i></a
+          ></span>
+          <span class="footer-icon">
+            <a
+              class="footer-link"
+              href="https://www.instagram.com/maryaaaaamm/"
+              target="_blank"
+              title="Instagram Link"
+              ><i class="fab fa-instagram"></i></a
+          ></span>
+          <span class="footer-icon">
+            <a
+              class="footer-link"
+              href="https://github.com/maryam-mohebbi"
+              target="_blank"
+              title="Github Link"
+              ><i class="fab fa-github"></i></a
+          ></span>
+        </div>
+      </footer>
+    </div>
+
     <script src="src/js.js"></script>
   </body>
 </html>
