--- a/contactme.html
+++ b/contactme.html
@@ -132,7 +132,7 @@
 
     <div class="wrap">
       <div id="about-me" class="header-page">
-        <h1 class="h1-mainheader">Do you want to get in touch with me ? 😎</h1>
+        <h1 class="h1-mainheader">Let's get in touch 😎</h1>
       </div>
 
       <div id="contactme-part" class="container mt-5">
